--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint --fix ./src",
+    
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "preview": "vite preview",
-    "prepare": "husky && husky install"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.11",
     "@tanstack/react-router": "^1.45.8",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
@@ -23,28 +25,31 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.416.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
+    "simple-excel-to-json": "^2.3.0",
     "usehooks-ts": "^3.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
     "@tanstack/eslint-plugin-query": "^5.51.12",
     "@tanstack/router-devtools": "^1.45.8",
     "@tanstack/router-plugin": "^1.45.8",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -61,12 +66,16 @@
     "vite": "^5.3.4"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "src/**/*.{ts,tsx}": [
       "eslint --cache --fix",
+      "prettier --write"
+    ],
+    "src/**/*.{js,jsx,ts,tsx}": [
       "prettier --write"
     ],
     "**/*.{js,jsx,ts,tsx}": [
       "npm run lint"
-    ]
+    ],
+    "*.{ts,tsx}": "eslint --cache --fix"
   }
 }
