Added Form Elements

--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "eslint --cache --fix",
-      "prettier --write"
+      "eslint --cache --fix"
     ],
     "src/**/*.{js,jsx,ts,tsx}": [
       "prettier --write"
