--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce",
+  "name": "demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -67,8 +67,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "eslint --cache --fix",
-      "prettier --write"
+      "eslint --cache --fix"
     ],
     "src/**/*.{js,jsx,ts,tsx}": [
       "prettier --write"
